fixed newsletter section and bottom margin gap

--- a/style.css
+++ b/style.css
@@ -136,13 +136,14 @@ button:hover {
     background-color: rgb(0, 110, 255);
     color: white;
     border-radius: 20px;
-    font-family:Arial, Helvetica, sans-serif;
-    font-size: large;
     padding: 50px;
+    margin: 80px;
 }
 
 .newsletterText {
     max-width: 300px;
+    font-family:Arial, Helvetica, sans-serif;
+    font-size: large;
 }
 
 .newsletterButton {
@@ -156,4 +157,5 @@ button:hover {
     color: lightgray;
     background-color: #1f2937;
     padding: 20px;
+    margin-bottom: 0;
 }
